fix: testimonials not showing on firefox

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,5 +7,12 @@
 }
 
 .swiper-slide {
-    @apply h-[436px] !important;
+    @apply h-[436px] w-[577px] flex !important;
+}
+
+/* Apply the styles only for Firefox */
+@-moz-document url-prefix() {
+    .swiper-slide {
+        @apply h-[436px] w-[31.5%] flex !important;
+    }
 }
